[workspace]
members = [
    "module",
    "octopusxt-cli",
]

[patch.crates-io]
# this is for subxt
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
# fix 1.0.98 group is private
syn =  { git = "https://github.com/octopus-network/syn.git" }