[package]
name = "octopusxt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# subxt call substrate
subxt = { git = "https://github.com/octopus-network/substrate-subxt.git", branch = 'octopus-v0.9.18' }

structopt = "0.3.26"
tokio = { version = "1.0", default-features = false, features = ["rt-multi-thread", "time", "sync"] }
hex = "0.4.3"
subtle-encoding = { version = "0.5", default-features = false }
hex-literal = "0.3.4"
env_logger = "0.9.0"
tracing = { version = "0.1.33", default-features = false }
jsonrpsee = { version = "0.13.1", features = ["macros", "ws-client", "http-client"] }
prost-types = { version = "0.10.1", default-features = false }
serde = { version = "1.0.130", default-features = false }
libsecp256k1 = { version = "0.7.0", features = ["static-context"], default-features = false }

# beefy
beefy-light-client = { git = "https://github.com/octopus-network/beefy-light-client.git", branch = "feature/v0.9.18", default-features = false }

# substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
pallet-mmr-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
beefy-primitives = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
beefy-merkle-tree = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", features = ["keccak"], default-features = false }

# ibc
tendermint-proto = { version = "0.23.6", default-features = false }
ibc = { git  = "https://github.com/octopus-network/ibc-rs.git", branch = "feature/ibc-v0.9.18" }
ibc-proto = { git  = "https://github.com/octopus-network/ibc-rs.git", branch = "feature/ibc-v0.9.18" }
# ibc = { path = "../ibc-rs/modules" }
# ibc-proto = { path = "../ibc-rs/proto" }


[dev-dependencies]
hex-literal = "0.3"
chrono = "0.4"

# [patch.crates-io]