[package]
name = "octopusxt-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octopusxt = { path = "../module"}

ibc = { git  = "https://github.com/octopus-network/ibc-rs.git", branch = "feature/ics20" }
ibc-proto = { git  = "https://github.com/octopus-network/ibc-rs.git", branch = "feature/ics20" }
tendermint-proto = { version ="0.23.6", default-features = false }

hex = "0.4.3"
env_logger = "0.8.3"
serde_json = { version = "*"}
structopt = "0.3.26"
subtle-encoding = { version = "0.5", default-features = false }
tokio = { version = "1.0", default-features = false, features = ["rt-multi-thread", "time", "sync"] }

codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
subxt = { version = "0.15.0", git = "https://github.com/octopus-network/substrate-subxt.git", branch = 'octopus-v0.9.13' }
sp-runtime = { git = "https://github.com/paritytech/substrate/", branch = "polkadot-v0.9.13" }
sp-core = { git = "https://github.com/paritytech/substrate/", branch = "polkadot-v0.9.13" }
sp-keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate/", branch = "polkadot-v0.9.13" }
sc-cli = {git = "https://github.com/paritytech/substrate/", branch = "polkadot-v0.9.13" }