[package]
name = "octopusxt-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

generator-metadata = { path = "../generator-metadata" }

hex = "0.4.3"
env_logger = "0.8.3"
serde_json = { version = "*"}
structopt = "0.3.26"
subtle-encoding = { version = "0.5", default-features = false }
tokio = { version = "1.0", default-features = false, features = ["rt-multi-thread", "time", "sync"] }
futures = "0.3.13"

codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
subxt = { git = "https://github.com/paritytech/subxt.git", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-cli = {git = "https://github.com/paritytech/substrate.git", branch = "master" }