[package]
name = "octopusxt-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# octopusxt
octopusxt = { path = "../module"}


# ibc protocl
ibc = { git  = "https://github.com/octopus-network/ibc-rs.git", branch = "feature/merge-master" }
ibc-proto = { git  = "https://github.com/octopus-network/ibc-rs.git", branch = "feature/merge-master" }
# ibc = { path = "../../ibc-rs/modules" }
# ibc-proto = { path = "../../ibc-rs/proto" }
tendermint-proto = { version = "0.23.9" }

hex = "0.4.3"
env_logger = "0.9.0"
serde_json = { version = "1"}
structopt = "0.3.26"
subtle-encoding = { version = "0.5", default-features = false }
tokio = { version = "1.0", default-features = false, features = ["rt-multi-thread", "time", "sync"] }
futures = "0.3.13"

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
subxt = {  git = "https://github.com/octopus-network/substrate-subxt.git", branch = 'master' }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }